Lots of progress. Fixed the overlapping with some additional containers and flex rules.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,46 @@
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 0;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+  .container{
+    display:flex;
+    flex-direction: column;  
+  }
 .header {
-  height: 72px;
-  background: rgba(10, 20, 68, 0.808);
+    display: flex;
+    justify-content: space-between;
+  background: rgba(0, 3, 15, 0.808);
   color: white;
+}
+
+.body {
+ display: flex;
+ justify-content: space-between;
+ flex-direction: column;  
+  background: rgba(0, 3, 15, 0.808);
+  color: white;
+}
+
+.subtext{
+    display: flex;
+    background-color: white;
+}
+.quote{
+    display: flex;
+    background-color: gray;
+    color: black;
+    font-style: italic;
+}
+
+.action{
+    display:flex;
+    background-color: white;
+    flex-direction: column;  
+    justify-content: center;
 }
 li{
   margin-bottom: 16px;
@@ -23,11 +62,6 @@ a {
 .white {
     color: white
 }
-/*.body {
-    flex:1;
-  display: flex;
-  flex-direction: column;
-}*/
 
 .left{
   display: flex;
@@ -36,6 +70,23 @@ a {
 
 .right{
   display: flex;
-  align-items: flex-end;
-  gap: 8px;
+  justify-content: flex-end;
+  
+}
+
+.wrap{
+    display: flex;
+    flex-wrap:wrap;
+    max-width: 600px;
+}
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 72px;
+    background: rgba(0, 3, 15, 0.808);
+    color: white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
 }
